k8s/kyverno/create-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyvtest
  labels:
    env: dev
    owner: me
